--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,48 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width initial-scale=1,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1604260_kgmf77uontt.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <style>
+      body{
+        width: 100%;
+        height: 100%;
+      }
+      #app{
+        height: 2000px;
+      }
+    </style>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
+    <script>
+    //  function refreshRem(){
+    //     //获取屏幕宽度
+    //   let clientWidth = document.documentElement.clientWidth
+    //   //将屏幕分成十等分
+    //   let fontSizeVlue = clientWidth / 10
+    //   //设定单位rem值的大小
+    //   let rem = fontSizeVlue
+    //   //设定body标签字体的大小
+    //   document.body.style.fontSize = '24px'
+    //   //设定html上fontsize的大小
+    //   document.documentElement.style.fontSize = fontSizeVlue + 'px'
+    //  }
+    //  window.addEventListener('pageshow',function(){
+    //   refreshRem()
+    //  })
+    //  let timer;
+    //  window.addEventListener('resize',function(){
+    //    if(timer){
+    //      clearTimeout(timer)
+    //    }
+    //    timer = setTimeout(()=>{
+    //      refreshRem()
+    //    },300)
+    //  })
+    </script>
   </body>
 </html>
