--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width initial-scale=1,user-scalable=no">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="//at.alicdn.com/t/font_1604260_ajpn1i19zkf.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_1604260_vbzaw1lkgv.css">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
       body{
@@ -14,7 +14,9 @@
         height: 100%;
         background:#EEEEEE
       }
-     
+     #app{
+       height: 100%;
+     }
       
     </style>
   </head>
